--- a/css/main.css
+++ b/css/main.css
@@ -80,39 +80,6 @@ body{
     background-color: rgb(117, 220, 141);
 
 }
-.texto{/*solo ue coloca punto cuando es class*/
-    display: flex;
-    width: 300px; /*largura*/
-    justify-content: center;
-    align-items: center;
-    margin-top: 35px;/*al colocar margend erecha se mueve la caja a derecha, manualmente, pero crea un borde, como si la pag fuese una hoja*/
-    height: 150px;/*altura de la caja*/
-    padding: 5px 20px;/*margin interno, espacio entre teto y caja, arriba, derecha, abajo izquierda, o podemos poner 1 valor para todos*/
-    border-radius: 30px;
-    color: brown;
-    background: rgb(73, 197, 225);
-    overflow: hidden;/*mascara, si se modifica el tamaño de la pantalla, no deja salir el texto de la caja, reajustandolo*/
-    /*overflow: scroll mete todo el texto dentro de la caja y aparece un cursor, para ver todo el texto*/
-    box-shadow: 7px 7px 20px red;/*direccion de la sombra derecha o izquierda,luz arriba o abajo, efecto de transparencia, color*/
-    cursor: ; /*sin cursor*/  
-}
-.titulo{
-    position: absolute;
-    top: 530px;
-    display: flex;
-    color: aquamarine;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-align: center;
-    font-size: 30px;
-    line-height: 35px;
-
-}
-/*h2{
-    margin-top: 35px;
-    text-align: center;
-    color: blueviolet;
-
-}*/
 .imagem2{/* configuraciones en la div imagem*/
     display: flex;
     justify-content: center;
@@ -122,6 +89,42 @@ body{
     border-radius: 50px;
     margin-top: 20px; /*margen superior*/
 }
+.texto{/*solo ue coloca punto cuando es class*/
+    display: flex;
+    width: 300px; /*largura*/
+    justify-content: center;
+    align-items: center;
+    margin-top: 35px;/*al colocar margend erecha se mueve la caja a derecha, manualmente, pero crea un borde, como si la pag fuese una hoja*/
+    height: 150px;/*altura de la caja*/
+    padding: 5px 10px;/*margin interno, espacio entre teto y caja, arriba, derecha, abajo izquierda, o podemos poner 1 valor para todos*/
+    border-radius: 30px;
+    color: brown;
+    background: rgb(73, 197, 225);
+    overflow: hidden;/*mascara, si se modifica el tamaño de la pantalla, no deja salir el texto de la caja, reajustandolo*/
+    /*overflow: scroll mete todo el texto dentro de la caja y aparece un cursor, para ver todo el texto*/
+    box-shadow: 7px 7px 20px red;/*direccion de la sombra derecha o izquierda,luz arriba o abajo, efecto de transparencia, color*/
+    cursor: text; /*sin cursor*/  
+    margin-left: 34.5%;
+}
+.titulo{
+    display: flex;
+    position: absolute;
+    margin-top: -120px;
+    color: aquamarine;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    font-size: 30px;
+    line-height: 35px;
+
+}
+/*h2{
+    display: flex;
+    margin-top: 35px;
+    text-align: center;
+    color: blueviolet;
+
+}
+*/
 
 .linguagem{
     display: flex;
@@ -136,7 +139,7 @@ body{
 .projetos{
     display: flex;
     margin-top: 40px;
-    flex-direction: row;
+    flex-direction: column;/*en row(fila) afectó a los videos*/
 }
 .projetos img{
     display: flex;
@@ -147,4 +150,57 @@ body{
     color: blue;
     box-shadow: 2px 2px 2px black;
     border-radius: 90px;
+}
+
+.subtitulo{
+    font-weight: 600;
+    color: rgb(84, 9, 148);
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 35px;
+    margin-top: 45px;
+    margin-bottom: 20px;
+}
+.linguagem{
+    display: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+.linguagem img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 400;
+    border-radius: 50px;
+    margin: 5px;
+    box-shadow: 0px 50px 50px rgba(0, 0, 0, 1);
+}
+.item{
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Times New Roman', Times, serif;
+    color: blue;
+    border: 5px solid rgb(37, 186, 212);
+    border-radius: 50px;
+    width: 600px;
+    height: 50px;
+    font-size: 22px;
+    background: rgb(37, 190, 121);
+
+}
+.item:hover{
+    transition: 0.2s;
+    background-color: aqua;
+}
+#movie{
+    padding: 15px;
+    margin: auto;
+    display: none;
+
+}
+#movie.active{
+    display: block;/*ocultar el flex que estuvimos usando desde el inicio*/
 }
