--- a/css/main.css
+++ b/css/main.css
@@ -213,6 +213,27 @@ body{
     padding: 50px;
     font-family: 'Times New Roman', Times, serif;
 }
+/*.imagem3{
+    display: flex;
+    justify-content: center;
+    width: 600px; 
+    height: 300;
+}
+.imagem3 img{ 
+    width: 600px;
+    height: 300;
+    border-radius: 50px;
+    margin-top: 20px; 
+}*/
+#fotES{ /*al colocar el # desaparece la imagen*/
+    padding: 15px;
+    margin: auto;
+    display: none;
+    
+}
+#fotES.active{
+    display: block;/*ocultar el flex que estuvimos usando desde el inicio*/
+}
 /*recurso css que renderiza o conteudo do site e adapta para diverças resoluções(panallas)*/
 /*resolução  700px, la imagen disminuye su tamaño cuando la pantalla es pequeña*/
 @media (max-width: 700px) {
@@ -233,7 +254,7 @@ body{
     }
     .linguagem img{
         width: 265px;
-
+        box-shadow: 0px 30px 30px rgba(0, 0, 0, 1);
     }
     .subtitulo{
         font-size: 20px;
@@ -247,9 +268,11 @@ body{
         height: 40px;
         font-size: 20px;
     }
+  
     /*los ids se llaman con #*/
     #movie{
         width: 325px;
+        height: 180px;
     }
 }
 @media (max-width: 500px) {
@@ -265,12 +288,12 @@ body{
     }
     .texto {
         width: 133px;
-        height: 210px;/*la altura tiene que ser mayor, porque al reducir, el texto tiene que bajar*/
+        height: 240px;/*la altura tiene que ser mayor, porque al reducir, el texto tiene que bajar*/
         margin-left: 29%;
     }
     .linguagem img{
         width: 185px;
-
+        box-shadow: 0px 15px 15px rgba(0, 0, 0, 1);
     }
     .subtitulo{
         font-size: 20px;
@@ -284,9 +307,14 @@ body{
         height: 30px;
         font-size: 18px;
     }
+    /*para el tamaño de los titulos que aparecen sobre los videos de youtube, pero no funcionó
+    .movieAlbum{
+        font-size: 12px;
+    }*/
     /*los ids se llaman con #*/
     #movie{
         width: 228px;
+        height: 128px;
     }
 }
 /*para el caso de la orientacion horizontal*/
